# paperskg

./: .gitignore  README.md  _get_mcp_path.py  llm_client.py  main.py  paperskg_mcp_setting.json  pyproject.toml  requirements.txt  schemas.py  server.py  test_mcp.py
